tests/negative/semantic/import_missing_file/input.ci
import "missing.ci";
void main(string[] args) {}
